# tw3-cahirp

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  example.ws  justfile  output.ws
fake-game/content/content0/scripts/game/player/: r4Player.ws
fake-game/mods/mod0000_MergedFiles/content/scripts/game/components/: inventoryComponent.ws
fake-game/mods/modExample/cahirp/: main.ws
mods/modExample/cahirp/: main.ws
recipes/: main.ws
src/: encoding.rs  error.rs  main.rs
src/cli/: mod.rs  prints.rs
src/cli/commands/: build.rs  mod.rs
src/codegen/: cursor.rs  emitter.rs  export_database.rs  file_defs_buf.rs  file_pool.rs  mod.rs  orchestrator.rs
src/game/: paths.rs
src/parser/: context.rs  directive.rs  directive_type.rs  mod.rs  parameters.rs
src/parser/directives/: directive_type.rs  id.rs  insert.rs  mod.rs  replace.rs
