[package]
name = "tw3-cahirp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
ctrlc = "3.4.1"
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
nom = "7.1.3"
notify-debouncer-full = "0.3.1"
owo-colors = "3.5.0"
rayon = "1.8.0"